finished file_sharing

--- a/file_sharing/public/css/custom.css
+++ b/file_sharing/public/css/custom.css
@@ -40,6 +40,10 @@ body{
 	color: #ffffff;
 	font-size: 105px;
 }
+#status{
+	padding: 0 !important;
+	line-height: 0 !important;
+}
 #filename{
 	margin: 0;
 }
